--- a/thesis.tex
+++ b/thesis.tex
@@ -60,6 +60,9 @@ linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
 %\usepackage[linesnumbered,german]{algorithm2e}
 \usepackage[linesnumbered,english]{algorithm2e}
 
+% Gantt
+\usepackage{pgfgantt}
+
 %%===================================
 % Custom definitions
     
